ecr、network周り(internet gatewa, route table)の構築

--- a/init/Makefile
+++ b/init/Makefile
@@ -1,5 +1,17 @@
-fmt:
-	terraform fmt
-	
+validate:
+	terraform validate
+
+fmt: validate
+	terraform fmt -recursive	
+
 plan: fmt
 	terraform plan
+
+app:
+	terraform apply -auto-approve
+
+des:
+	terraform destroy -auto-approve
+
+graph:
+	terraform graph -draw-cycles -type=apply | dot -Tjpg > graph.jpg
